--- a/templates/utils/menu.html
+++ b/templates/utils/menu.html
@@ -9,7 +9,11 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'cine:listar_locales' %}">Locales</a>
-                </li>                
+                </li>   
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'cine:listar_locales' %}">Locales</a>
+                </li>
+                
             </ul>
         </div>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
